website/versioned_docs/version-2.14.x/reference/targets/helm_deployment.mdx
---
title: helm_deployment
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A Helm chart deployment.

Backend: <span className="color--primary">`pants.backend.experimental.helm`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

## `release_name`

<Field
    type_repr={`field.type_hint`}
>

Name of the release used in the deployment. If not set, the target name will be used instead.

</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies` or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.14/docs/targets for more about how addresses are formed, including for generated targets. You can also run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list dir` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `sources`

<Field
    type_repr={`field.type_hint`}
    default_repr={`('*.yaml', '*.yml')`}
>

Helm configuration files for a given deployment.

</Field>

## `namespace`

<Field
    type_repr={`field.type_hint`}
>

Kubernetes namespace for the given deployment.

</Field>

## `skip_crds`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, then does not deploy the Custom Resource Definitions that are defined in the chart.

</Field>

## `values`

<Field
    type_repr={`field.type_hint`}
>

Individual values to use when rendering a given deployment.

Value names should be defined using dot-syntax as in the following example:
```
helm_deployment(
    values={
        "nameOverride": "my_custom_name",
        "image.pullPolicy": "Always",
    },
)
```

Values can be dynamically calculated using interpolation as shown in the following example:
```
helm_deployment(
    values={
        "configmap.deployedAt": "{env.DEPLOY_TIME}",
    },
)
```

Check the Helm backend documentation on what are the options available and its caveats when making usage of dynamic values in your deployments.

</Field>

## `create_namespace`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, the namespace will be created if it doesn&#x27;t exist.

</Field>

## `no_hooks`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, none of the lifecycle hooks of the given chart will be included in the deployment.

</Field>

## `timeout`

<Field
    type_repr={`field.type_hint`}
>

Timeout in seconds when running a Helm deployment.

</Field>



</span>